[package]
edition = "2021"
name = "grpc"
version = "0.1.0"

[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"

[dependencies]
diesel = {version = "1.4", features = ["postgres"]}
dotenv = "0.15"
prost = "0.10"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.7"

[build-dependencies]
tonic-build = "0.7"
